[package]
name = "lib-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
scc = "2.1.9"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
url = "2.5.2"
